test fix yet another white band on phone + font too small on phone for def blocks

--- a/theme.scss
+++ b/theme.scss
@@ -66,6 +66,14 @@
   }
 }
 
+// for the secondary nav present only on phones
+@media (max-width: 991.98px) {
+  nav.quarto-secondary-nav {
+    background-color: $grey-soft;
+    color: $grey-black;
+  }
+}
+
 #title-block-header {
   margin-bottom: -1px;
 }
@@ -387,8 +395,7 @@ img[alt=frontlogo] {
     margin: 1.5rem 0;
     padding: 0.7rem 0.7rem 0rem 0.9rem;
     line-height: 1.2rem;
-    font-size: 0.78rem;
-  }
+   }
 }
 
 @media(max-width: 500px) {
